# harness-pilot

./: .gitignore  AGENTS.md  API.md  CONTRIBUTING.md  FAQ.md  README.md  test.js
.claude-plugin/: marketplace.json
.claude/plugins/harness-creator/: SKILL.md  plugin.json
.comate/specs/agents-md-optimization/: doc.md  summary.md  tasks.md
.comate/specs/auto-agents-md/: doc.md  summary.md  tasks.md
.harness/: capabilities.json  manifest.json
.harness/.schema/: agent-state.json  checkpoint.json  manifest.json  next-steps.json  resume.json  task.json
.harness/docs/: ARCHITECTURE.md  BAD_CASES.md  DEVELOPMENT.md  OPTIMIZATION_PLAN.md  PRODUCT_SENSE.md  WORKFLOW.md
.harness/handoffs/: README.md
.harness/hooks/: post-commit
.harness/memory/: README.md
.harness/scripts/: generate-test.sh  lint-imports.ts  lint-semantic.ts  lint-tsc.ts  validate.ts
.harness/tasks/: README.md
.harness/tests/: handoff-test.md
.harness/trace/: README.md
docs/: API.md  CONTRIBUTING.md  FAQ.md  OPTIMIZATION_PLAN.md  design-harness-creator.md  detailed-design.md  handoff-mechanism.md  harness-report.md  overview-design.md
plugins/harness-pilot/: plugin.json
test-projects/harness-test-nextjs/: jest.config.js  package-lock.json  package.json  tsconfig.json
test-projects/harness-test-python/: main.py  pyproject.toml
test-projects/harness-test-python/models/: user.py
test-projects/harness-test-python/services/: user.py
test-projects/harness-test-python/utils/: format.py
utils/: string-utils.ts
utils/__tests__/: string-utils.test.ts
(+219 files in other folders)
